@@ -504,14 +504,14 @@ void MessageEditor::createFileTransferBar()
 	indicatorLayout->setSpacing(0);
 	indicatorLayout->setContentsMargins(0,0,0,0);
 
-	QWidget* cancelHelperWidget = new QWidget;
+	/*QWidget* cancelHelperWidget = new QWidget;
 	QHBoxLayout* cancelHelperLayout = new QHBoxLayout;
 	cancelHelperLayout->setContentsMargins(0, 0, 0, 0);
+	cancel = createFileTransferToolButton(fileTransferIcon("cancel"), this, SLOT(cancelTransferring()));
+	cancelHelperLayout->addWidget(cancel);
+	cancelHelperWidget->setLayout(cancelHelperLayout);*/
 	cancel = new QPushButton(tr("Cancel"));
 	connect(cancel, SIGNAL(clicked(bool)), this, SLOT(cancelTransferring()));
-	//cancel = createFileTransferToolButton(fileTransferIcon("cancel"), this, SLOT(cancelTransferring()));
-	cancelHelperLayout->addWidget(cancel);
-	cancelHelperWidget->setLayout(cancelHelperLayout);
 
 	fileStatusLabel = new QLabel(tr("<small>Status...</small>"));
 	fileProgress = new QProgressBar();
@@ -522,7 +522,7 @@ void MessageEditor::createFileTransferBar()
 
 	fileProcessBar->addWidget(ftLabel2);
 	fileProcessBar->addWidget(indicatorWidget);
-	fileProcessBar->addWidget(cancelHelperWidget);
+	fileProcessBar->addWidget(cancel);
 
 	fileProcessBar->setVisible(false);
 }
